# mimo-chat-desktop

./: index.html  package-lock.json  package.json  start.sh
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
