[package]
name = "mimo-chat"
version = "1.0.0"
description = "MiMo Chat Desktop - رابط چت وب دسکتاپ"
authors = ["MiMo Team"]
edition = "2021"

[lib]
name = "mimo_chat_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
